--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <title>iPhone 14</title>
     <link rel="shortcut icon" href="./img/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 <body>
     <header class="header">
         <div class="container">
             <nav class="nav">
+                <button type="button" class="menu-btn">
+                    <span class="btn-line"></span>
+                    <span class="btn-line"></span>
+                    <span class="btn-line"></span>
+                    <span class="btn-line"></span>
+                </button>
                 <ul class="menu">
                     <li class="menu-item"><a class="menu-link" href="#">Что нового</a></li>
                     <li class="menu-item"><a class="menu-link" href="#">Цвет</a></li>
@@ -84,7 +91,7 @@
                         <p>В ближайшее время наш менеджер свяжется с Вами</p>
                         <button type="submit" >Заказать</button>
                     </form>
-                    <img src="./img/contacts-img.jpg" alt="iPhone 14 PRO">
+                    <img src="./img/contacts-img.jpg" alt="iPhone 14 PRO" class="contacts-img">
                 </div>
             </div>
         </section>
@@ -98,5 +105,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/main.js"></script>
 </body>
 </html>
